--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
+    "lodash": "^4.17.11",
     "minireset.css": "^0.0.4",
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
