--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Naoto Imamachi <naoto.imamachi@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-emotion": "^4.0.6",
@@ -28,6 +32,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-share": "^2.4.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
