--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-kawaii": "^0.12.0",
     "react-share": "^2.4.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
