--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-s3": "^0.2.5",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-typography": "^2.2.12",
     "gatsby-remark-autolink-headers": "^2.0.16",
@@ -48,7 +49,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "aws s3 sync public s3://www.xxxx.com --acl public-read --delete",
+    "deploy": "gatsby-plugin-s3 deploy",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
